Replace the build with shadow-cljs, and add tests that run
lein-cljsbuild out, shadow-cljs in, with the worker compiled like
everything else rather than shipped as source and eval'd at runtime. CI
moves to GitHub Actions on JDK 25, and gains what it never had: unit
tests, an entry-point guard, and a smoke test that boots the real
application.

The smoke test earns its place immediately. Almost nothing here can be
loaded in isolation — lt.object, lt.objs.files and lt.objs.menu all reach
for Electron or the DOM while loading — and the failures this codebase
produces are load-time and cross-process ones that unit tests cannot see.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018WW5xyxhXNYzixm76hSAZK